--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,8 @@ jobs:
         run: |
           python -m pip install -U pip
           pip install -U ruff pylint mypy pytest httpx fastapi uvicorn
-          pip install -U transformers sentence-transformers torch --index-url https://download.pytorch.org/whl/cpu
+          pip install -U --index-url https://download.pytorch.org/whl/cpu torch==2.10.0+cpu
+          pip install -U transformers==5.1.0 sentence-transformers==5.2.2
 
       - name: Ruff
         run: ruff check .
