--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
           pip install -U ruff pylint mypy pytest httpx fastapi uvicorn
           pip install -U --index-url https://download.pytorch.org/whl/cpu torch==2.10.0+cpu
           pip install -U transformers==5.1.0 sentence-transformers==5.2.2
+          pip install -U datasets evaluate
 
       - name: Ruff
         run: ruff check .
