ci: validate k8s manifests without cluster openapi

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,5 +45,6 @@ jobs:
         run: |
           curl -sSL -o kubectl "https://dl.k8s.io/release/v1.35.0/bin/linux/amd64/kubectl"
           chmod +x kubectl
-          ./kubectl apply --dry-run=client -f k8s/
+          ./kubectl apply --dry-run=client --validate=false -f k8s/
+
 
